--- a/index.html
+++ b/index.html
@@ -56,21 +56,41 @@
                 <h2 class="features-title hidden-title">Особенности</h2>
                 <ul class="features-list list">
                     <li class="features-item">
+                        <div class="features-card">
+                            <svg class="features-card-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-features-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Внимание к деталям</h3>
                         <p class="features-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-card">
+                            <svg class="features-card-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-features-2"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Пунктуальность</h3>
                         <p class="features-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
                     <li class="features-item">
+                        <div class="features-card">
+                            <svg class="features-card-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-features-3"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Планирование</h3>
                         <p class="features-item-text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
                     <li class="features-item">
+                        <div class="features-card">
+                            <svg class="features-card-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-features-4"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item-title">Современные технологии</h3>
                         <p class="features-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -111,6 +131,36 @@
                         <div class="team-card-bottom">
                             <h3 class="team-list-title">Игорь Демьяненко</h3>
                             <p lang="en" class="team-list-text">Product Designer</p>
+                            <ul class="team-social-list list">
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -118,6 +168,36 @@
                         <div class="team-card-bottom">
                             <h3 class="team-list-title">Ольга Репина</h3>
                             <p lang="en" class="team-list-text">Frontend Developer</p>
+                            <ul class="team-social-list list">
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -125,6 +205,36 @@
                         <div class="team-card-bottom">
                             <h3 class="team-list-title">Николай Тарасов</h3>
                             <p lang="en" class="team-list-text">Marketing</p>
+                            <ul class="team-social-list list">
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="" class="team-social-link link">
+                                        <svg class="team-social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -132,6 +242,36 @@
                     <div class="team-card-bottom">
                         <h3 class="team-list-title">Михаил Ермаков</h3>
                         <p lang="en" class="team-list-text">UI Designer</p>
+                        <ul class="team-social-list list">
+                            <li class="team-social-item">
+                                <a href="" class="team-social-link link">
+                                    <svg class="team-social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="" class="team-social-link link">
+                                    <svg class="team-social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="" class="team-social-link link">
+                                    <svg class="team-social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="" class="team-social-link link">
+                                    <svg class="team-social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                     </li>
                 </ul>
@@ -142,12 +282,48 @@
             <div class="container">
                 <h2 class="clients-title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-list-link">
+                            <svg class="clients-list-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-clients-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-list-link">
+                            <svg class="clients-list-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-clients-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-list-link">
+                            <svg class="clients-list-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-clients-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-list-link">
+                            <svg class="clients-list-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-clients-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-list-link">
+                            <svg class="clients-list-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-clients-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-list-link">
+                            <svg class="clients-list-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-clients-6"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -155,14 +331,49 @@
     <!-- Подвал -->
     <footer class="footer">
         <div class="container footer-container">
-            <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-accent">Studio</span></a>
-            <address class="footer-contacts">
-                <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="list">
-                    <li class="footer-mail"><a href="mailto:info@example.com" class="footer-contact link">info@example.com</a></li>
-                    <li class="footer-tel"><a href="tel:+380991111111" class="footer-contact link">+38 099 111 11 11</a></li>
+            <div class="footer-adress-container">
+                <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-accent">Studio</span></a>
+                <address class="footer-contacts">
+                    <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="list">
+                        <li class="footer-mail"><a href="mailto:info@example.com" class="footer-contact link">info@example.com</a></li>
+                        <li class="footer-tel"><a href="tel:+380991111111" class="footer-contact link">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social-container">
+                <h3 class="footer-social-title">присоединяйтесь</h3>
+                <ul class="footer-social-list list">
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
