--- a/portfolio.html
+++ b/portfolio.html
@@ -146,14 +146,51 @@
     <!-- Подвал -->
     <footer class="footer">
         <div class="container footer-container">
-            <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-accent">Studio</span></a>
-            <address class="footer-contacts">
-                <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="list">
-                    <li class="footer-mail"><a href="mailto:info@example.com" class="footer-contact link">info@example.com</a></li>
-                    <li class="footer-tel"><a href="tel:+380991111111" class="footer-contact link">+38 099 111 11 11</a></li>
+            <div class="footer-adress-container">
+                <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-accent">Studio</span></a>
+                <address class="footer-contacts">
+                    <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="list">
+                        <li class="footer-mail"><a href="mailto:info@example.com"
+                                class="footer-contact link">info@example.com</a></li>
+                        <li class="footer-tel"><a href="tel:+380991111111" class="footer-contact link">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social-container">
+                <h3 class="footer-social-title">присоединяйтесь</h3>
+                <ul class="footer-social-list list">
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
